# gh-gpt

./: .env.example  Cargo.toml  README.md
.github/workflows/: test.yml
src/: config.rs  labels.rs  lib.rs  main.rs
src/cli/: commands.rs
src/prompts/: mod.rs
src/prompts/templates/: labelize.txt
