[package]
name = "gh-gpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.2.7", features = ["derive"]}
color-eyre = "0.6.2"
config = "0.13.3"
dotenv = "0.15.0"
env_logger = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.17"
octocrab = "0.21.0"
serde = "1.0.163"
serde_derive = "1.0.163"
tokio = { version = "1", features = ["full"] }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy"]

[profile.dev.package.backtrace]
opt-level = 3
